# evm

./: .autotools  .gitignore  .gitmodules  .vscode-ctags  README.md  help.md  help2.md  makefile
bsp/bouffalolab/: genromap  makefile  proj_config.mk
bsp/bouffalolab/app/: bouffalo.mk  evm_lua_conf.h  main.c
bsp/bouffalolab/evm/: bouffalo.mk  main.c
bsp/bouffalolab/test/: main.js
bsp/common/: evm_main.c
bsp/ejs/qemu_cortex_m3/: CMakeLists.txt  prj.conf
bsp/ejs/qemu_cortex_m3/ejs/: CMakeLists.txt
bsp/epy/qemu_cortex_m3/: CMakeLists.txt  prj.conf
bsp/eqml/stm32/stm32f103-fire-arbitrary/: CMakeLists.txt  prj.conf
bsp/eqml/stm32/stm32f103-fire-arbitrary/boards/arm/stm32f103_fire_arbitrary/: Kconfig.defconfig  stm32f103_fire_arbitrary.dts
bsp/linux/: client.js
bsp/linux/app/: app  app.pro  main.c
bsp/qemu_cortex_m3/ejs/: CMakeLists.txt
bsp/qemu_cortex_m3/ejs/src/: evm_board.h  main.c
bsp/rt-thread/: README.md
bsp/rt-thread/qemu-vexpress-a9/: .config  Kconfig  SConscript  SConstruct  log.py  qemu-dbg.bat  qemu-nographic.bat  qemu.bat  rtconfig.h  rtconfig.py  test.js
bsp/stm32/bearpi_stm32L431/: CMakeLists.txt  prj.conf
bsp/stm32/bearpi_stm32l431/: CMakeLists.txt  prj.conf
bsp/stm32/bearpi_stm32l431/boards/arm/bearpi_stm32l431/: Kconfig.board  Kconfig.defconfig  bearpi_stm32l431.dts  bearpi_stm32l431.yaml  bearpi_stm32l431_defconfig  pinmux.c
bsp/stm32/bearpi_stm32l431/boards/arm/bearpi_stm32l431/support/: openocd.cfg
bsp/stm32/bearpi_stm32l431/soc/arm/st_stm32/stm32l4/: soc.h
bsp/stm32/bearpi_stm32l431/src/: evm_board.c  evm_board.h  main.c
bsp/stm32/stm32f103-fire-arbitrary/: CMakeLists.txt  prj.conf
bsp/win32/: eluaos.pro  evm_lua_conf.h  lnewstate.c  main.c
bsp/win32/include/: luat_conf_bsp.h
bsp/win32/lib/: rs232.lua
bsp/win32/module_test/: 001task.lua  002json.lua  003zbuff.lua  004crypto.lua  005io.lua  readme.md  sys.lua  test.sh
bsp/win32/port/: luat_base_win32.c  luat_crypto_win32.c  luat_fs_win32.c  luat_gpio_rtt.c  luat_http_win32.c  luat_lib_gpio.c  luat_lib_socket.c  luat_lib_win32.c  (+7 more)
bsp/zephyr/: README.md
bsp/zephyr/stm32/stm32f103-fire-arbitrary/: CMakeLists.txt  prj.conf
bsp/zephyr/stm32/stm32f103-fire-arbitrary/boards/arm/stm32f103_fire_arbitrary/: Kconfig.board  Kconfig.defconfig  pinmux.c  stm32f103_fire_arbitrary.dts  stm32f103_fire_arbitrary_defconfig
bsp/zephyr/stm32/stm32f103-fire-arbitrary/dts/bindings/: wiznet,w5500.yaml
bsp/zephyr/stm32/stm32f103-fire-arbitrary/src/: main.c
components/: README.md
components/evm/: evm_module.c  evm_module_adc.c  evm_module_can.c  evm_module_dac.c  evm_module_flash.c  evm_module_i2c.c  evm_module_lcd.c  evm_module_led.c  evm_module_pin.c  evm_module_rtc.c  evm_module_spi.c  evm_module_switch.c  evm_module_timer.c  evm_module_uart.c  evm_module_watchdog.c
components/mbedtls/: CMakeLists.txt
doc/: hm.md
drivers/zephyr/: CMakeLists.txt  Kconfig  adc_driver.c  can_driver.c  dac_driver.c  driver.pri  exti_driver.c  flash_driver.c  gpio_driver.c  i2c_driver.c  lcd_driver.c  pwm_driver.c  rtc_driver.c  spi_driver.c  sys_driver.c  system_driver.c  timer_driver.c  uart_driver.c  watchdog_driver.c  wdg_driver.c
ejs/: CMakeLists.txt  README.md  ejs.pro  evm.h  evm_main.c  evm_main.h  main.c  nevm.h  prj.conf  uol_output.c  uol_output.h
ejs/src/: evm_board.h  main.c
ejs/test/: and-or.js  arithmetics-bignums.js  arithmetics.js  array-prototype-indexof.js  arrow_function.js  assignments.js  bitwise-logic.js  combined.js  console.js  date.js  do-while.js  equality.js  eval.js  fill-array-with-numbers-3-times-5000-elements.js  for-in.js  for.js  function-args.js  function.prototype.js  function_loop.js  gc.js  if-else.js  json.js  logical.js  loop_arithmetics_10kk.js  main.py  math-abs.js  math-log.js  navier-stokes.js  navier-stokes_qjs.js  new.js  object-assgin.js  object-create.js  object-keys.js  object-new.js  object.js  octal.js  prototype.js  string.js  switch-case.js  test.js  (+9 more)
eqml/: evm_main.c  uol_output.c  uol_output.h
include/: bget.h  ecma.h  evm.h  evm_board.h  evm_lua_conf.h  evm_main.h  evm_module.h  evm_type.h  lauxlib.h  lua.h  nevm.h  qml_module.h  re.h  rotable.h
include/evm_module/: evm_module.h
lib/: README.md
lib/arm-windows-armcc/: libqml.lib
modules/ecma/: ecma.c  ecma.h  ecma_array.c  ecma_math.c  ecma_number.c  ecma_object.c  ecma_regexp.c  ecma_string.c  re.c  re.h
modules/eluaos/: bouffalo.mk
modules/evm/: evm_module.c  evm_module_adc.c  evm_module_can.c  evm_module_dac.c  evm_module_flash.c  evm_module_i2c.c  evm_module_lcd.c  evm_module_led.c  evm_module_network.c  evm_module_pin.c  evm_module_rtc.c  evm_module_socket.c  evm_module_spi.c  evm_module_switch.c  evm_module_timer.c  evm_module_uart.c  evm_module_watchdog.c  evm_module_wifi.c
modules/heatshrink/: compress_heatshrink.c  compress_heatshrink.h  wrap_heatshrink.c  wrap_heatshrink.h
modules/iotjs/: bouffalo.mk
modules/linux/: evm_main.c  evm_module.c  evm_module_assert.c  evm_module_buffer.c  evm_module_fs.c  evm_module_gpio.c  evm_module_http.c  evm_module_net.c  evm_module_process.c  evm_module_timers.c
modules/mpy/: _frozen_mpy.c  evm_module_mpy.c  mpconfigport.h
modules/python_builtins/: python_builtins.c  python_builtins.h
modules/qml/: qml_lvgl_utils.h  qml_module.c
modules/rt-thread/: evm_main.c  evm_module_adc.c  evm_module_fs.c  evm_module_gpio.c  evm_module_http.c  evm_module_i2c.c  evm_module_net.c  evm_module_pwm.c  evm_module_spi.c  evm_module_timers.c  evm_module_uart.c  evm_module_udp.c
sdk/: README.md
test/: hello.js  http-server.py  tcp-client.py  tcp-server.py  test_assert.js  test_buffer.js  test_client.js  test_dns.js  test_events.js  test_gpio.js  test_http.js  test_net.js  test_server.js  test_timers.js  test_udp.js  timer.js  udp-client.py  udp-server.py
test/elua/: main.js  test_http.js  test_socket.js  test_socket1.js
test/wasm/: test.c  test.wasm  test.wast  test.wat
thirds/cjson/: cjson.pri
thirds/littlevgl_qml/: README.md
tools/: .evmrc  README.md  build.py  evm.header  evm.sh  updateheaderinfo.py
(+637 files in other folders)
